Stop background aniimation from going behind desscription for readability

--- a/src/components/Landing/Landing.module.css
+++ b/src/components/Landing/Landing.module.css
@@ -43,6 +43,8 @@
   margin-bottom: 12px;
   text-align: left;
   line-height: 1;
+  width: fit-content;
+  /* background-color: rgb(245, 245, 245); */
 }
 
 .greeting:last-child {
@@ -55,6 +57,7 @@
   max-width: 600px;
   margin-bottom: 8px;
   transition: all 300ms ease;
+  background-color: rgb(245, 245, 245);
 }
 
 .description_hover {
